in-depth tech check - removed unnecessary divs, fixed headers, added semantic tags, fixed padding, fixed classes with overlapping properties

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,29 +11,12 @@
 }
 
 * {
-    margin: auto;   
-
+    margin: 0;   
+    padding: 0;
 }
 
 html {
-    background-color: black;
-}
-
-/* LOGO ITEMS HERE */
-.logofont {
-    font-family: EngebrechtreB;
-    text-transform: uppercase;
-    font-style: italic;
-    font-size: 40px;
-    font-weight: bolder;
-    letter-spacing: 1px;
-}
-
-.logoimage {
-    position: relative;
-    height: 40px;
-    top: 4px;
-    left: 5px;
+    background-color: white;
 }
 
 /* TYPEFACE */
@@ -43,7 +26,6 @@ h1, h2, h3, h4, h5, h6 {
     color: black;
     text-transform: capitalize;
     margin-bottom: 0.8rem;
-
 }
 
 h1 {
@@ -58,6 +40,8 @@ h2 {
 h3 {
     font-size: 1.5rem;
 }
+
+
 
 p, ul {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -76,6 +60,10 @@ p, ul {
 
 li {
     margin-bottom: 0.1rem;
+}
+
+ul {
+    padding-left: 20px;
 }
 
 /* MENU BARS */
@@ -104,6 +92,7 @@ li {
     color: #661d39;
 }
 
+
 /* IMAGES */
 
 .framedimage {
@@ -112,63 +101,72 @@ li {
     margin: 7px 0;
 }
 
+/* IMPORTANT PAGE CLASSES */
 
-
-/* IMPORTANT PAGE CONTENT */
-.borderlesscontainer {
-    box-sizing: border-box;
-    width: var(--content-width);
-    padding-bottom: 7px;
+.center {
+    display: flex;
+    justify-content: center;
 }
 
-header {
-    background-color: white;
+
+/* HEADER */
+
+.header {
     padding-top: 15px;
 }
 
-.pagecontent {
-    padding: 20px;
+.headercontainer {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    width: var(--content-width);
 }
 
-.pagecontentsection {
-    padding-bottom: 40px;
+.logofont {
+    font-family: EngebrechtreB;
+    text-transform: uppercase;
+    font-style: italic;
+    font-size: 40px;
+    font-weight: bolder;
+    letter-spacing: 1px;
 }
 
-/* CONTENTCONTAINER */
-#containertop {
+.logoimage {
+    height: 40px;
+}
+
+#searchbar {
+    padding-bottom: 4px;
+}
+
+.whitebox {
     border: 4px solid black;
     background-color: white;
+    width: var(--content-width);
+}
+
+.whitebox.top {
     border-bottom: none;
     height: var(--container-spacer-top-height);
-    width: var(--content-width);
     box-shadow: 7px 7px 0 0 black;
 }
 
-#containermiddle {
-    border: 4px solid black;
+.whitebox.middle {
     border-top: none;
-    background-color: white;
-    width: var(--content-width);
     box-shadow: 7px 0 0 0 black;
     border-bottom: none;
-    
 }
 
-#containerbottom {
-    border: 4px solid black;
+.whitebox.bottom {
     border-top: none;
-    width: var(--content-width);
-    background-color: white;
     height: var(--container-spacer-bottom-height);
 }
 
-
-/* STRIPES BACKGROUND */
-#whitefillerbox {
+#stripesboxtop {
     background-color: white;
 }
 
-#stripesbox {
+#stripesboxmiddle {
     background: linear-gradient(
         to bottom,
         #ffffff,
@@ -179,27 +177,29 @@ header {
     background-size: 100% 50px;
 }
 
-#blackfillerbox {
+#stripesboxbottom {
     background-color: black;
 }
 
-#headercontainer {
-    display: flex;
-    
+.footer {
+    box-sizing: border-box;
+    padding-bottom: 7px;
+    background-color: black;
+    height: 300px;
 }
 
-#headercontainerchild {
-    min-width: 999px;
-}
-
-
-/* TEMPORARY */
-/* TEMPORARY */
-/* TEMPORARY */
-.temporaryfooter {
-    display: flex;
-    justify-content: center;
+.footercontainer {
     color: grey;
     padding-top: 20px;
 }
+
+.pagecontent {
+    padding: 20px;
+}
+
+.section {
+    padding-bottom: 40px;
+}
+
+
 
